--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/file-128x128.png" type="image/x-icon">
-  <meta name="description" content="בניית אתר לעסק|">
+  <meta name="description" content="בניית אתרים מקצועיים ומותאמים אישית, שיהפכו את העסק שלך להצלחה.
+אתרים מקצועיים ויעילים נוחים לשימוש, מהירים וידידותיים למנועי החיפוש.
+אנו משלבים בין ניסיון רב שנים, ידע טכנולוגי מתקדם ויצירתיות רבה, המתאימים לצרכים הייחודיים של כל לקוח.
+האתרים שלנו מאופיינים בעיצוב מרהיב, תוכן איכותי ותכנון פונקציונלי. 
+בין השירותים שלנו ניתן למצוא:
+בניית אתרי תדמית, בניית אתרי מסחר אלקטרוני, בניית אתרי פורטל , בניית אתרי חדשות
+בניית אתרי קהילה, בניית אתרי אפליקציות, דפי נחיתה ועוד.">
   
   
   <title>עמית שכטר בונה אתרים|בונה אתרים בזול|בניית אתרים|בניית אתרים בישראל</title>
@@ -316,7 +322,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="od3+wimMgc6UzYVrbeNmqh6esqgfLesTCJTo2+640EXO0p2UaiyOhOf8jkvM6m2COkBdEepBtJimVE6yLr429Rliron4uSMveYap7ADfU+MILZCN5K5UWNCfVs75JQHO.jtIHxU5fPy1u37eElKnlKDQk3YWkaSJ/D4674F1TXGK9z5FgGtCaGBa70punN6DzDq3igtf+mtbD3+ORnyuQqLlHNGtgdP6VRLj125K8kJuzGuI184Q1WObzPDSxry4Z">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Sb+iovbd2aM9LSq6GBCuTcNiTA9u4XABQuICEQOND2PB8y0MircgeuNxQ+LRpFcnIpGcRcedKaGMzDAAASllOOkz/gbsRPan9Ztv8sOD98IPjc4CcfWfV7uaGEB/mTyA.zzpwRX5z00yCECtiK9hskt5xDu/LE74VJlasU+vm8ZArjmRKW77ZnL7tRcrWb4QuaUghc+4WS1QrbJj0YaoMQ0bn58EXFQdMIR8nBUN3R9z/P9Ypq/imrqaZVgXtoGXG">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
