--- a/page1.html
+++ b/page1.html
@@ -7,7 +7,13 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/file-128x128.png" type="image/x-icon">
-  <meta name="description" content="">
+  <meta name="description" content="בניית אתרים מקצועיים ומותאמים אישית, שיהפכו את העסק שלך להצלחה.
+אתרים מקצועיים ויעילים נוחים לשימוש, מהירים וידידותיים למנועי החיפוש.
+אנו משלבים בין ניסיון רב שנים, ידע טכנולוגי מתקדם ויצירתיות רבה, המתאימים לצרכים הייחודיים של כל לקוח.
+האתרים שלנו מאופיינים בעיצוב מרהיב, תוכן איכותי ותכנון פונקציונלי. 
+בין השירותים שלנו ניתן למצוא:
+בניית אתרי תדמית, בניית אתרי מסחר אלקטרוני, בניית אתרי פורטל , בניית אתרי חדשות
+בניית אתרי קהילה, בניית אתרי אפליקציות, דפי נחיתה ועוד.">
   
   
   <title>מחירים והסברים|הסבר על תהליך בניית אתר</title>
