--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -36,6 +36,20 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCQRLWQNR2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCQRLWQNR2');
+</script>
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu menu01 agentm5 cid-tQoGZRZKrG" once="menu" id="menu01-0">
 
