--- a/index.html
+++ b/index.html
@@ -39,6 +39,20 @@
 
 </head>
 <body>
+
+<!-- Analytics -->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VCQRLWQNR2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VCQRLWQNR2');
+</script>
+<!-- /Analytics -->
+
+
   
   <section data-bs-version="5.1" class="menu menu01 agentm5 cid-tQoE65BU48" once="menu" id="menu01-0">
 
@@ -322,7 +336,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="mndD4iT/eeEGGba/2R9wNThdnFrHfMKSmaD4AHhWiTqrDyL5t4rgaf8+98j4jW2LQh/ipS6Y4zgKAL5lYIKJK8ot8AcNXIaCVNSaw6hpB64GjsW+hDDexpRvxJhiBmdP.LGCbOC6UX0zIKRW6sdybzVESHrJX/gpB662MagbybT/Rt7sVqpjvi5ceu2GDeJaVBH7SaMcVYSWV45YUuDufO7A0zzE8zy1WiIa88INVideRTlrvmUbLAcl1VdETB56N">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="E2gUKmLeDXb3FJ3IibY1HkvrpbR0UQjPdzcb6k3E5ZwPiQ1u2Dqk9K9C4K7piQG5GfuzQu0zwitCiNaoYI4G2QoLJGBeTOM2WD1KAKuwd+0VlR7Paioy/oEdwzH6pwyk.fW8hjFQBSrBKPHffLNYTO/mc7wDygen+Zf2f4zR/VJFjdnb8BHJCOIPpeWtIQjOFvuQ2s4nHebVVHQsFdXBL0VwNBeH54Z+LAsMGVrLWz0Bss0wntsjUoLYUkdHQCtwV">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
