--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         <img src="assets/images/2b5ddd4d-38be-4d8c-b348-60ecc2aa5fb4-100x65.jpg" alt="bwas">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-5" href="index.html#top">BWAS</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-5" href="index.html#top">BWAS&nbsp;</a></span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
                         <span></span>
@@ -336,7 +336,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="E2gUKmLeDXb3FJ3IibY1HkvrpbR0UQjPdzcb6k3E5ZwPiQ1u2Dqk9K9C4K7piQG5GfuzQu0zwitCiNaoYI4G2QoLJGBeTOM2WD1KAKuwd+0VlR7Paioy/oEdwzH6pwyk.fW8hjFQBSrBKPHffLNYTO/mc7wDygen+Zf2f4zR/VJFjdnb8BHJCOIPpeWtIQjOFvuQ2s4nHebVVHQsFdXBL0VwNBeH54Z+LAsMGVrLWz0Bss0wntsjUoLYUkdHQCtwV">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="stnCHEBsqPJP1BZEOKl0I58tPYojCRl6Amf1ckFR8z29qVxSGpqUlWmBd9YUkAekoy9Whu2PFu3+82mEsc4DTrkiinKacaHMo0mmePGJL2DMHlhvrXYRyug6cUcqBNcI.u7X0d7rYxLBHuqdk7AKsYx4G4+AgJG1HMapYB+Ub53fG5Ociloej3W0Ca/jZAcC/niUDN4/Q1n76And0sXyAVQAMpvn6gVsYsk++H03kXwgymJ+0gCm2cfXSZqYog2qW">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -418,8 +418,7 @@
                         </div>
                         <div id="collapse2_7" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_7">
                             <div class="panel-body">
-                                <p class="mbr-fonts-style panel-text display-7"><strong>
-                                    זה הרוב תלוי בך אני יכול להקים אתר ב7 ימים הכול משתנה בין אדם לאדם&nbsp;<br>אם זה אדם חרוץ שמשקיע על האתר שלו כל יום שלוח תכנים&nbsp;<br>מבצע מה שאני אומר לו זה בערך שבוע&nbsp;<br>אם זה מישהו שהוא מורח את הזמן זה יכול לקחת חודש חודשיים&nbsp;<br>(תלוי בך)</strong></p>
+                                <p class="mbr-fonts-style panel-text display-7"><strong>זה הרוב תלוי בך, אני יכול להקים אתר ב7 ימים. הכול משתנה בין אדם לאדם<br>אם זה אדם חרוץ שמשקיע על האתר שלו כל יום שלוח תכנים <br>ומבצע מה שאני דורש ממנו זה בערך שבוע . אך לפעמים יכול לקחת יותר<br>אם זה מישהו שמורח את הזמן זה יכול לקחת לפעמים גם חודש<br></strong>!<strong>הכל תלוי בך</strong><br></p>
                             </div>
                         </div>
                     </div>
