--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -63,7 +63,7 @@
                         <img src="assets/images/2b5ddd4d-38be-4d8c-b348-60ecc2aa5fb4-100x65.jpg" alt="bwas">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-5" href="index.html#top">BWAS</a></span>
+                <span class="navbar-caption-wrap"><a class="navbar-caption text-secondary display-5" href="index.html#top">BWAS&nbsp;</a></span>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-bs-toggle="collapse" data-target="#navbarSupportedContent" data-bs-target="#navbarSupportedContent" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <div class="hamburger">
                         <span></span>
