--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qqsxNgWEg8ZqVP12aftu9WXYkCB6VFsB1BzypxQgF9p66jMeej/w4lCQrircQgqOoc1cIoNinh/bCujqpvDvnW5FDmDKGvPeaXTyZz3S1a8AsCsgzSosj5Bf8ONksngn.kQPZAdqpuCDN1TnKPptyw4DNXUkcg6L57+YuJl0vVrREtXoMbZuTpiOzwD3LJ+PoIu8G7XIBVX3+qGNupsa0l1MFxa4ub260mbxtUnwooIZ/KbwOFMblhWzFVrwBYgZE">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="pXfSlMl34YPKZscy7qY/Yqyi9zdKMcCmKqqy6Az/4fDyPZHCdUgNiKpvDsyq6o4eccvW+hJCOp9hlrgf63p7L+2WW3lb74JsY+6qRrDQ3GboZmE9EfhoiKnLbortpzBW.MRXUSMxkAXTuoL5fmk8SwcfsB6oyASpmxn+GE3EsargoCGGws1Xz9S/1qs+rjgkBWXAuQcgyh6KY8dJBeRHOXGUnxecB5SiHzGJMuUBGHrUfXB+mg4ZFsGy4/MXk90tZ">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -409,7 +409,7 @@
                                 <h4 class="card-title mbr-fonts-style display-7"><strong>בוריס איפרהימוב</strong></h4>
                                 <p class="card-desc mbr-fonts-style display-4"><strong>גנן באזור השרון</strong></p>
                                 <p class="card-text mbr-fonts-style display-7">תודה רבה על השירות המעולה גם עם הלוגו וגם עם העזרה הכללית במהלך בניית האתר והמחיר מאוד משתלם ביחס למה שקיבלת ממליץ בחום <br>לכולם היה לי חוויה לעבוד איתך עמית תודה רבה<br>בוריס בגינה<br><br></p>
-                                <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="#">borisbagina.com</a></div>
+                                <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://borisbagina.com/">borisbagina.com</a></div>
                             </div>
                         </div>
                     </div>
