--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -22,12 +22,12 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
-  <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+    <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
-  <link rel="preload" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Jost:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
+  <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
 
   
@@ -79,7 +79,7 @@
                     </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#list01-d">שאלות נפוצות</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
-                    </li><li class="nav-item dropdown open">
+                    </li><li class="nav-item dropdown">
                         <a class="nav-link link text-primary dropdown-toggle show display-4" href="file:///C:/Users/%D7%9C%D7%99%D7%A2%D7%93%20%D7%A9%D7%9B%D7%98%D7%A8/AppData/Local/Mobirise.com/Mobirise/amitshechter6630_0040gmail_002ecom/addons/agentm5/components/index.html" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">אודות</a><div class="dropdown-menu show" aria-labelledby="dropdown-774" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="index.html#header01-g">מי אני<br></a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features1-1">למה אצלי</a><a class="text-primary show dropdown-item display-4" style="text-align:right" href="index.html#features3-6">עם  מה  אני  בא<br></a></div>
                     </li></ul>
                 
@@ -296,8 +296,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">                                     
                                             <div class="price-container">
-                                                <p class="original-price display-5"><strong>1200</strong></p>
-                                                <p class="discount-price display-5"><strong>1000</strong></p>
+                                                <p class="original-price display-5"><strong>1600</strong></p>
+                                                <p class="discount-price display-5"><strong>1500</strong></p>
                                             </div>
 
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0">
@@ -371,8 +371,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">
                                       <div class="price-container">
-                                                <p class="original-price display-5"><strong>2300</strong></p>
-                                                <p class="discount-price display-5"><strong>2100</strong></p>
+                                                <p class="original-price display-5"><strong>2500</strong></p>
+                                                <p class="discount-price display-5"><strong>2300</strong></p>
                                             </div>
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>תשיארו פניה</a></div>
                                     </div>
@@ -439,8 +439,8 @@
                                 <div class="price-wrapper">
                                     <div class="price-wrap">
                                       <div class="price-container">
-                                                <p class="original-price display-5"><strong>4700 </strong></p>
-                                                <p class="discount-price display-5"><strong>4500</strong></p>
+                                                <p class="original-price display-5"><strong>5000</strong></p>
+                                                <p class="discount-price display-5"><strong>4700</strong></p>
                                             </div>
                                         <div class="mbr-section-btn"><a class="btn btn-primary display-4" href="index.html#form01-0"><span class="mobi-mbri mobi-mbri-right mbr-iconfont mbr-iconfont-btn"></span>תשיארו פניה</a></div>
                                     </div>
