--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
   <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/smart-cart/minicart-theme.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
@@ -360,7 +360,7 @@
         <div class="row row-main">
             <div class="col-12 col-lg-6 card mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="d9JKSqMYVlEUPk4WyYfQK4l0g2bh3wdONemaVTnv1EiHVWSirDo6SasDomLzrfXsJmIl8ipujFp0vBdbDwvvD5xTthFn4TS3NVq6g4GsQ/lnnaXTP4NjVyiG/gEc6VOF.ySVeb8rGbdgp30v8fUcIx7Zh2RbbMTe0TPT+EpuIz3uEUiqgNbmQQH7l26/uj6xNUf/n6XxfWpv4PqzPJLhcoW0rEuSdSDKWg+d7fF8OLiDOvkLLeFvBiO4oAn5dNM2K">
+<form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler form-wrap" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="czNOK3cfpEOwMwFXwGHL6a7/3ZC6XtXNoNKXdkTHfEI4LzAO6a6lOBWyZyraTnTk1xvMdfzOoIlIRT62Ks30MLyEY9Of8cA8DABi03XelgtxEaG0el0LqamUtnvR9K77.Y7nhFaCFx8kMD0w4s3qTScNUrxfhTQXzPeIELpXoOT6sHU9hCyCREMTi7VQqm0tqjiPw8GelO+4tuISNb4ylqXHw138n0Uyb2XO0Bt3f123VRLqXFBzjJIFYmwegg9Zp">
 <div class="row">
 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">:הפרטיים נשלחו בהצלחה</div>
 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12"> ...תקלה לא צפויה </div>
@@ -412,7 +412,7 @@
                     <div class="item features-image item-mb active">
                         <div class="item-wrapper">
                             <div class="item-img">
-                                <img src="assets/images/e7d3a3cc-ea1c-4f03-9432-c7e451ba0361-2-160x165.jpg" alt="" data-slide-to="2" data-bs-slide-to="2">
+                                <img src="assets/images/e7d3a3cc-ea1c-4f03-9432-c7e451ba0361-2-160x165.jpg" alt="" data-slide-to="0" data-bs-slide-to="0">
                             </div>
                             <div class="item-content">
                                 <h4 class="card-title mbr-fonts-style display-7">
@@ -426,13 +426,25 @@
                     </div><div class="item features-image item-mb">
                         <div class="item-wrapper">
                             <div class="item-img">
-                                <img src="assets/images/def0c2b9-26b4-49ab-b3f7-7778f584f647-3-160x285.jpeg" alt="" data-slide-to="0" data-bs-slide-to="0">
+                                <img src="assets/images/def0c2b9-26b4-49ab-b3f7-7778f584f647-3-160x285.jpeg" alt="" data-slide-to="1" data-bs-slide-to="1">
                             </div>
                             <div class="item-content">
                                 <h4 class="card-title mbr-fonts-style display-7"><strong>בוריס איפרהימוב</strong></h4>
                                 <p class="card-desc mbr-fonts-style display-4"><strong>גנן באזור השרון</strong></p>
                                 <p class="card-text mbr-fonts-style display-7">תודה רבה על השירות המעולה גם עם הלוגו וגם עם העזרה הכללית במהלך בניית האתר והמחיר מאוד משתלם ביחס למה שקיבלת ממליץ בחום <br>לכולם היה לי חוויה לעבוד איתך עמית תודה רבה<br>בוריס בגינה<br><br></p>
                                 <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://borisbagina.com/">borisbagina.com</a></div>
+                            </div>
+                        </div>
+                    </div><div class="item features-image item-mb">
+                        <div class="item-wrapper">
+                            <div class="item-img">
+                                <img src="assets/images/whatsapp-image-2024-02-06-at-09.14.09-833x517.jpg" alt="" data-slide-to="2" data-bs-slide-to="2">
+                            </div>
+                            <div class="item-content">
+                                <h4 class="card-title mbr-fonts-style display-7"><strong>המנעולן</strong></h4>
+                                <p class="card-desc mbr-fonts-style display-4"><strong>מנעולן בכל השרון והסביבה</strong></p>
+                                <p class="card-text mbr-fonts-style display-7">תודה רבה על הכול גם על הכנסת העסק שלי לגוגל ביזניס וגם על האתר שיצא במחיר מדהים עם התחזוקה והשינוים וגם על העיצוב באמת ממליץ לכולם&nbsp;<br>רק אצלך ממליץ בחום לא&nbsp;<br>ימצאו טוב יותר ממך במחיר ללא תחרות כמו&nbsp;<br>שאתה מפרסם תודה רבה&nbsp;</p>
+                                <div class="mbr-section-btn"><a class="btn btn-secondary-outline display-4" href="https://manolan24-7.com/">manolan24-7.com</a></div>
                             </div>
                         </div>
                     </div>
@@ -467,17 +479,17 @@
                 </div>
             </div>
             <div class="col-12 col-lg-8 card">
-                <div id="bootstrap-accordion_8" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                <div id="bootstrap-accordion_14" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                     <div class="card">
                         <div class="card-header" role="tab" id="headingOne">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_8" aria-expanded="false" aria-controls="collapse1">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse1_14" aria-expanded="false" aria-controls="collapse1">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; האם אתה לא צעיר מידי ופחות מנוסה</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse1_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_8">
+                        <div id="collapse1_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>&nbsp;בעייני לא וגם בעיני הלקוחות שלי, עם הידע והטאצ האישי שלי תהיו מרוצים מאוד, בנוסף עצם היותי צעיר זה יתרון, אני נענה מהר לבקשת הלקוח ומוודא שהוא מרוצה ב 100%</strong></p>
                             </div>
@@ -485,7 +497,7 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingTwo" style="text-align:right">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_8" aria-expanded="false" aria-controls="collapse2">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse2_14" aria-expanded="false" aria-controls="collapse2">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>
                                     </strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;<strong>תוך כמה זמן יש לי אתר</strong></p></h4>
                                 <span class="icon-wrapper">
@@ -493,7 +505,7 @@
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse2_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_8">
+                        <div id="collapse2_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>זה הרוב תלוי בך, אני יכול להקים אתר ב7 ימים. הכול משתנה בין אדם לאדם<br>אם זה אדם חרוץ שמשקיע על האתר שלו כל יום שלוח תכנים <br>ומבצע מה שאני דורש ממנו זה בערך שבוע . אך לפעמים יכול לקחת יותר<br>אם זה מישהו שמורח את הזמן זה יכול לקחת לפעמים גם חודש<br></strong>!<strong>הכל תלוי בך</strong><br></p>
                             </div>
@@ -501,14 +513,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingThree">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_8" aria-expanded="false" aria-controls="collapse3">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse3_14" aria-expanded="false" aria-controls="collapse3">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5" style="text-align:right"><p><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; איך יש לך זמן לשלב גם לימודים וגם עבודה</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse3_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_8">
+                        <div id="collapse3_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>אז השאלה הזאת מאוד נפוצה התשובה היא פשוטה אני
 <br>בן אדם חרוץ שמשקיע בכל דבר שאני מתחיל בחיים לא עוזב
@@ -518,14 +530,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFour">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_8" aria-expanded="false" aria-controls="collapse4">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse4_14" aria-expanded="false" aria-controls="collapse4">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><p><strong>איך אתה מתמודד עם בעיות טכניות שעלולות להתרחש בזמן בנייה של אתר</strong></p></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse4_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_8">
+                        <div id="collapse4_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>בדרך כלל אני מצליח להסתדר עם הכול ואם אני לא מצליח יש לי חברים בתחום שמבינים ובנוים גם</strong></p>
                             </div>
@@ -533,14 +545,14 @@
                     </div>
                     <div class="card">
                         <div class="card-header" role="tab" id="headingFive">
-                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_8" aria-expanded="false" aria-controls="collapse5">
+                            <a role="button" class="panel-title collapsed" data-toggle="collapse" data-bs-toggle="collapse" data-core="" href="#collapse5_14" aria-expanded="false" aria-controls="collapse5">
                                 <h4 class="panel-title-edit mbr-fonts-style display-5"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; יש לך תיק עבודות</strong></h4>
                                 <span class="icon-wrapper">
                                     <span class="sign mbr-iconfont mobi-mbri-plus mobi-mbri"></span>
                                 </span>
                             </a>
                         </div>
-                        <div id="collapse5_8" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_8">
+                        <div id="collapse5_14" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingFive" data-parent="#accordion" data-bs-parent="#bootstrap-accordion_14">
                             <div class="panel-body">
                                 <p class="mbr-fonts-style panel-text display-7"><strong>אז כן יש לי תיק עבודות ואתר אחד שעומד וכמה בתהליכי הרמה ועוד אתרים שבניתי&nbsp;</strong><br><strong>לדוגמאות ועוד</strong></p>
                             </div>
