--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -21,14 +21,14 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+    <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
+  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=JgWbPL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=JgWbPL" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=McDALR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=McDALR" type="text/css">
 
   
   
@@ -75,7 +75,7 @@
             </div>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                        <a class="nav-link link text-primary dropdown-toggle show display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="true">&nbsp; התהליך והמחיר</a><div class="dropdown-menu show" aria-labelledby="dropdown-981" data-bs-popper="none"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
+                        <a class="nav-link link text-primary dropdown-toggle display-4" href="page1.html#header02-1" data-toggle="dropdown-submenu" data-bs-toggle="dropdown" data-bs-auto-close="outside" aria-expanded="false">&nbsp; התהליך והמחיר</a><div class="dropdown-menu" aria-labelledby="dropdown-981"><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#header12-h">הסבר קצר על התהליך</a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#features03-3">?מהי התחייבות שלכם </a><a class="text-primary dropdown-item display-4" style="text-align:right" href="התהליך והמחיר.html#pricing01-d">המחירים</a></div>
                     </li><li class="nav-item"><a class="nav-link link text-primary display-4" href="index.html#list01-d">שאלות נפוצות</a></li>
                     <li class="nav-item">
                         <a class="nav-link link text-primary display-4" href="index.html#contacts01-3">צרו קשר</a>
@@ -502,9 +502,9 @@
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
-  <script src="assets/chatbutton/floating-wpp.js"></script>
+      <script src="assets/chatbutton/floating-wpp.js"></script>
   <script src="assets/chatbutton/script.js"></script>
-      <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   <script src="https://cdn.enable.co.il/licenses/enable-L25197m6h825pgny-0324-57190/init.js"></script>
