--- a/התהליך והמחיר.html
+++ b/התהליך והמחיר.html
@@ -21,14 +21,14 @@
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-    <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
-  <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
+  <link rel="stylesheet" href="assets/chatbutton/floating-wpp.css">
+    <link rel="stylesheet" href="assets/popup-overlay-plugin/style.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
   <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Assistant:200,300,400,500,600,700,800&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=McDALR"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=McDALR" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=avdfqE"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=avdfqE" type="text/css">
 
   
   
@@ -502,9 +502,9 @@
   <script src="assets/web/assets/cookies-alert-plugin/cookies-alert-script.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
   <script src="assets/ytplayer/index.js"></script>
-      <script src="assets/chatbutton/floating-wpp.js"></script>
+  <script src="assets/chatbutton/floating-wpp.js"></script>
   <script src="assets/chatbutton/script.js"></script>
-  <script src="assets/dropdown/js/navbar-dropdown.js"></script>
+      <script src="assets/dropdown/js/navbar-dropdown.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   <script src="https://cdn.enable.co.il/licenses/enable-L25197m6h825pgny-0324-57190/init.js"></script>
